--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-scss-lint": "^0.3.4",
     "grunt-svgmin": "^2.0.0",
     "grunt-svgstore": "^0.5.0",
     "grunt-usemin": "^3.0.0"
