--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-assemble": "^0.2.0",
     "grunt-autoprefixer": "^2.2.0",
     "grunt-browser-sync": "^2.0.0",
     "grunt-combine-media-queries": "^1.0.19",
