--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "grunt": "^0.4.5",
     "grunt-assemble": "^0.2.0",
     "grunt-autoprefixer": "^2.2.0",
-    "grunt-browser-sync": "^2.0.0",
     "grunt-combine-media-queries": "^1.0.19",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-cssmin": "^0.11.0",
     "grunt-contrib-htmlmin": "^0.3.0",
