--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-scss-lint": "^0.3.4",
     "grunt-svgmin": "^2.0.0",
     "grunt-svgstore": "^0.5.0",
-    "grunt-usemin": "^3.0.0"
+    "grunt-usemin": "^3.0.0",
+    "jit-grunt": "^0.9.1"
   }
 }
