--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-  "name": "website-boilerplate",
+  "name": "website-template",
   "version": "1.0.0",
-  "description": "",
-  "main": "gruntfile.js",
+  "description": "Boilerplate for static HTML websites, including Grunt workflow",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/marcobiedermannn/website-template.git"
+  },
+  "bugs": {
+    "url": "https://github.com/marcobiedermannn/website-template/issues"
+  },
   "scripts": {
     "test": "grunt test"
   },
-  "author": "",
+  "author": "Marco Biedermann",
   "license": "ISC",
   "devDependencies": {
     "grunt": "^0.4.5",
