--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,8 @@ node_js:
   - "0.12"
   - "0.11"
   - "0.10"
-before_install: npm install -g grunt-cli
+before_install:
+  - gem install sass
+  - gem install scss-lint
+  - npm install -g grunt-cli
 install: npm install
