--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -84,7 +84,7 @@ linters:
   NameFormat:
     enabled: true
     allow_leading_underscore: true
-    convention: hyphenated_lowercase # or 'BEM', or a regex pattern
+    convention: BEM # or 'BEM', or a regex pattern
 
   NestingDepth:
     enabled: true
@@ -109,7 +109,7 @@ linters:
 
   QualifyingElement:
     enabled: true
-    allow_element_with_attribute: false
+    allow_element_with_attribute: true
     allow_element_with_class: false
     allow_element_with_id: false
 
@@ -177,7 +177,7 @@ linters:
     properties: []
 
   VendorPrefix:
-    enabled: true
+    enabled: false
     identifier_list: base
     additional_identifiers: []
     excluded_identifiers: []
