--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-parker": "^0.1.3",
     "grunt-scss-lint": "^0.3.4",
     "grunt-svgmin": "^2.0.1",
     "grunt-svgstore": "^0.5.0",
