--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -39,7 +39,7 @@ linters:
     ignore_single_line_blocks: true
 
   EmptyRule:
-    enabled: true
+    enabled: false
 
   FinalNewline:
     enabled: true
