--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "grunt-svgmin": "^2.0.1",
     "grunt-svgstore": "^0.5.0",
     "grunt-usemin": "^3.0.0",
+    "grunt-webp": "0.0.4",
     "jit-grunt": "^0.9.1"
   }
 }
