--- a/package.json
+++ b/package.json
@@ -19,22 +19,22 @@
     "grunt-assemble": "^0.4.0",
     "grunt-autoprefixer": "^3.0.3",
     "grunt-combine-media-queries": "^1.0.19",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-connect": "^0.11.0",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-cssmin": "^0.14.0",
-    "grunt-contrib-htmlmin": "^0.6.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-concat": "^1.0.0",
+    "grunt-contrib-connect": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^1.0.1",
+    "grunt-contrib-htmlmin": "^1.2.0",
     "grunt-contrib-imagemin": "^1.0.0",
-    "grunt-contrib-jshint": "^0.11.2",
-    "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-uglify": "^0.10.0",
-    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "^1.0.1",
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-scss-lint": "^0.3.8",
-    "grunt-svgmin": "^2.0.1",
-    "grunt-svgstore": "^0.5.0",
-    "grunt-usemin": "^3.0.0",
-    "grunt-webp": "0.0.4",
-    "jit-grunt": "^0.9.1"
+    "grunt-svgmin": "^3.1.2",
+    "grunt-svgstore": "^1.0.0",
+    "grunt-usemin": "^3.1.1",
+    "imagemin-webp": "^3.1.1",
+    "jit-grunt": "^0.10.0"
   }
 }
