--- a/package.json
+++ b/package.json
@@ -15,27 +15,27 @@
   "author": "Marco Biedermann",
   "license": "ISC",
   "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-assemble": "^0.4.0",
-    "grunt-autoprefixer": "^3.0.3",
-    "grunt-combine-media-queries": "^1.0.19",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-concat": "^1.0.0",
-    "grunt-contrib-connect": "^1.0.1",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^1.0.1",
-    "grunt-contrib-htmlmin": "^1.2.0",
-    "grunt-contrib-imagemin": "^1.0.0",
-    "grunt-contrib-jshint": "^1.0.0",
-    "grunt-contrib-uglify": "^1.0.1",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-postcss": "^0.8.0",
-    "grunt-svgmin": "^3.1.2",
-    "grunt-svgstore": "^1.0.0",
-    "grunt-usemin": "^3.1.1",
-    "imagemin-webp": "^3.1.1",
-    "jit-grunt": "^0.10.0",
-    "postcss-cssnext": "^2.5.2",
-    "postcss-import": "^8.1.0"
+    "grunt": "~1.0.1",
+    "grunt-assemble": "~0.4.0",
+    "grunt-autoprefixer": "~3.0.3",
+    "grunt-combine-media-queries": "~1.0.19",
+    "grunt-contrib-clean": "~1.0.0",
+    "grunt-contrib-concat": "~1.0.0",
+    "grunt-contrib-connect": "~1.0.1",
+    "grunt-contrib-copy": "~1.0.0",
+    "grunt-contrib-cssmin": "~1.0.1",
+    "grunt-contrib-htmlmin": "~1.2.0",
+    "grunt-contrib-imagemin": "~1.0.0",
+    "grunt-contrib-jshint": "~1.0.0",
+    "grunt-contrib-uglify": "~1.0.1",
+    "grunt-contrib-watch": "~1.0.0",
+    "grunt-postcss": "~0.8.0",
+    "grunt-svgmin": "~3.1.2",
+    "grunt-svgstore": "~1.0.0",
+    "grunt-usemin": "~3.1.1",
+    "imagemin-webp": "~3.1.1",
+    "jit-grunt": "~0.10.0",
+    "postcss-cssnext": "~2.5.2",
+    "postcss-import": "~8.1.0"
   }
 }
