--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "Marco Biedermann",
   "license": "ISC",
   "devDependencies": {
+    "css-mqpacker": "^5.0.1",
+    "cssnano": "^3.5.2",
     "grunt": "~1.0.1",
     "grunt-assemble": "~0.4.0",
     "grunt-autoprefixer": "~3.0.3",
@@ -23,7 +25,6 @@
     "grunt-contrib-concat": "~1.0.0",
     "grunt-contrib-connect": "~1.0.1",
     "grunt-contrib-copy": "~1.0.0",
-    "grunt-contrib-cssmin": "~1.0.1",
     "grunt-contrib-htmlmin": "~1.2.0",
     "grunt-contrib-imagemin": "~1.0.0",
     "grunt-contrib-jshint": "~1.0.0",
