--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "author": "Marco Biedermann",
   "license": "ISC",
   "devDependencies": {
-    "css-mqpacker": "^5.0.1",
-    "cssnano": "^3.5.2",
+    "css-mqpacker": "~5.0.1",
+    "cssnano": "~3.6.2",
     "grunt": "~1.0.1",
     "grunt-assemble": "~0.4.0",
     "grunt-combine-media-queries": "~1.0.20",
