--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "website-template",
   "version": "1.0.0",
-  "description": "Boilerplate for static HTML websites, including Grunt workflow",
+  "description": "Boilerplate for static HTML websites, including Gulp workflow",
   "repository": {
     "type": "git",
     "url": "https://github.com/marcobiedermannn/website-template.git"
@@ -10,32 +10,35 @@
     "url": "https://github.com/marcobiedermannn/website-template/issues"
   },
   "scripts": {
-    "build": "grunt build"
+    "build": "gulp build"
   },
   "author": "Marco Biedermann",
   "license": "ISC",
   "devDependencies": {
-    "css-mqpacker": "~5.0.1",
-    "cssnano": "~3.8.0",
-    "grunt": "~1.0.1",
-    "grunt-assemble": "~0.5.0",
-    "grunt-combine-media-queries": "~1.0.20",
-    "grunt-contrib-clean": "~1.0.0",
-    "grunt-contrib-concat": "~1.0.1",
-    "grunt-contrib-connect": "~1.0.2",
-    "grunt-contrib-copy": "~1.0.0",
-    "grunt-contrib-htmlmin": "~2.0.0",
-    "grunt-contrib-imagemin": "~1.0.0",
-    "grunt-contrib-jshint": "~1.0.0",
-    "grunt-contrib-uglify": "~2.0.0",
-    "grunt-contrib-watch": "~1.0.0",
-    "grunt-postcss": "~0.8.0",
-    "grunt-svgmin": "~4.0.0",
-    "grunt-svgstore": "~1.0.0",
-    "grunt-usemin": "~3.1.1",
-    "imagemin-webp": "~4.0.0",
-    "jit-grunt": "~0.10.0",
-    "postcss-cssnext": "~2.8.0",
-    "postcss-import": "~8.2.0"
+    "babel-preset-latest": "^6.16.0",
+    "babel-register": "^6.18.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.0",
+    "gulp": "^3.9.1",
+    "gulp-clean-css": "^2.0.13",
+    "gulp-ejs-locals": "0.0.1",
+    "gulp-htmlmin": "^2.0.0",
+    "gulp-imagemin": "^3.0.3",
+    "gulp-postcss": "^6.2.0",
+    "gulp-rev": "^7.1.2",
+    "gulp-sourcemaps": "^2.1.1",
+    "gulp-svgmin": "^1.2.3",
+    "gulp-svgstore": "^6.1.0",
+    "gulp-uglify": "^2.0.0",
+    "gulp-webp": "^2.3.0",
+    "mkdirp": "^0.5.1",
+    "postcss-cssnext": "^2.8.0",
+    "postcss-import": "^8.1.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "lazysizes": "^2.0.6",
+    "svg4everybody": "^2.1.0"
   }
 }
