--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "browserify": "^14.1.0",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.0.3",
-    "gulp-ejs-locals": "0.0.1",
+    "gulp-ejs": "^3.0.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-imagemin": "^3.1.1",
     "gulp-postcss": "^6.3.0",
