--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "Marco Biedermann",
   "license": "ISC",
   "devDependencies": {
-    "babel-preset-latest": "^6.24.0",
+    "babel-preset-env": "^1.4.0",
     "babel-register": "^6.24.0",
     "babelify": "^7.3.0",
     "browserify": "^14.1.0",
